# WebsiteSummarizer

./: README.md  pyproject.toml
app/: logic.py  ui.py
website_summarizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
